--- a/app.json
+++ b/app.json
@@ -7,6 +7,11 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "androidStatusBar": {
+        "translucent": true,
+        "hidden": true
+      },
+  
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
